<resources>
    <string name="app_name">FirebaseIM</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="insert_password">Insert password...</string>
    <string name="insert_username">Insert username...</string>
    <string name="lorem_user">Lorem User</string>
    <string name="lorem_text">lorem text</string>
    <string name="visualized">visualized</string>
    <string name="lorem_text_date">11/11/11T12:44</string>
</resources>
